onsize change(constructor), scrollbar bug fix

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -100,7 +100,7 @@
 
 @media (max-width: 850px) {
   .container {
-    grid-template-columns: 180px 2fr auto;
+    grid-template-columns: 163px 2fr auto;
   }
 }
 
@@ -111,7 +111,7 @@
   }
 
   .container {
-    grid-template-columns: 80px 2fr auto;
+    grid-template-columns: 100px 2fr auto;
   }
 } 
 
