--- a/src/pages/Home/AddNewTrack/AddMusic.module.css
+++ b/src/pages/Home/AddNewTrack/AddMusic.module.css
@@ -59,11 +59,13 @@
     width: 40%;
 }
 .pictureBlock{
+    width: 100%;
     position: absolute;
     margin-top: 10px;
     flex-direction: column;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .insertNav{
     display: flex;
@@ -125,7 +127,6 @@
 }
 
 .track{
-    margin: 10px;
     border-radius: 5px;
     text-align: center;
     justify-content: center;
@@ -141,14 +142,47 @@
     height: 40px;
 }
 
-.indicator{    
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
+
+@media (max-width: 850px) {
+    .pictureNav{
+    width: 35%;
+    }
+    .form{
+        width: 600px;
+    }
+    .poster{
+        width: 150px;
+        height: 150px;
+    }
+    .picture{
+        width: 150px;
+        height: 150px;
+    }
+    .insertNav{
+        width: 150px;
+    }
+  }
+
+  @media (max-width: 610px) {
+    .pictureNav{
+    width: 30%;
+    }
+    .form{
+        height: 600px;
+        width: 500px;
+    }
+    .poster{
+        width: 120px;
+        height: 120px;
+    }
+    .picture{
+        width: 120px;
+        height: 120px;
+    }
+    .insertNav{
+        width: 120px;
+    }
+  }
 
 :root {
     --shadow-color: 216deg 11% 6%;
@@ -171,3 +205,4 @@
       -3.8px 33.6px 38px -2.1px hsl(var(--shadow-color) / 0.34),
       -5.6px 49.5px 56px -2.5px hsl(var(--shadow-color) / 0.34);
   }
+
